assets/css/style.scss
---
---

@import "{{ site.theme }}";

body {
    background: lightgrey;
    font-family: Roboto;
}

header {
    width: 240px;
}

section {
    width: 600px;
    font-size: 1.1em;
}

.post-box {
    background: whitesmoke;
    border-radius: 5px;
    padding: 10px;
    margin-top: 10px;
    margin-bottom: 10px;
    background: whitesmoke;
}

.wrapper {
  width: 55%;
}

.wrapper header {
  h2 {
    a {
      color: #303030;
    }
    a:hover {
      color: #808080;
    }
  }
  h1 {
    text-align: left;
    a {
      color: #303030;
    }
    a:hover {
      color: #808080;
    }
  }
}


.wrapper header a img {
    width: 196px;
    height: auto;
    display: block;
    padding-bottom: 10px;
}

.wrapper footer .view a {
  color: black;
  font-size: 1.1em;
  img {
    width: 24px;
    height: 24px;
    float: left;
    margin-right: 4px;
  }
}

.post-preview {
    border: 3px solid silver;
    border-radius: 5px;
    padding: 10px;
    margin-top: 10px;
    margin-bottom: 10px;
    background: whitesmoke;
    // needed for box-link
    position:relative;
}
.post-preview:hover {
    border-color: gray;
}
// https://stackoverflow.com/questions/796087/make-a-div-into-a-link
.box-link {
  position:absolute;
  width:100%;
  height:100%;
  top:0;
  left: 0;
  z-index: 1;

  /* edit: fixes overlap error in IE7/8,
     make sure you have an empty gif
  background-image: url('empty.gif');*/
}

